# AI4SAR-Interview

./: README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/.basedpyright/: baseline.json
backend/alembic/versions/: 869cfd49ebd5_initial.py  add_transcript_span_id.py
backend/src/: generate_transcript.py  long_run_eval.py  main.py
backend/src/interview_helper/: config.py
backend/src/interview_helper/ai_analysis/: ai_analysis.py
backend/src/interview_helper/ai_analysis/eval/: long_run_eval.py  metrics.py  test_question_quality.py
backend/src/interview_helper/audio_stream_handler/: audio_stream_handler.py
backend/src/interview_helper/audio_stream_handler/transcription/: azure_transcriber.py  common.py  vosk_transcriber.py
backend/src/interview_helper/context_manager/: TextCoalescer.py  database.py  messages.py  models.py  question_categories.py  session_context_manager.py  span_locator.py  types.py
backend/src/interview_helper/context_manager/tests/: test_concurrent_websocket.py  test_database.py  test_session_manager.py  test_span_locator.py
backend/src/interview_helper/downloads/: __init__.py  get_report.py  get_transcript.py  util.py
backend/src/interview_helper/security/: http.py
backend/src/interview_helper/tests/: test_config.py  test_report_generation.py
backend/test_samples/: transcript1.txt
docs/: GOOGLE_OIDC_SETUP.md
frontend/: index.html
frontend/src/: App.tsx  AppLayout.tsx  AuthCallback.tsx  constants.ts  main.tsx
frontend/src/components/: AudioSender.tsx  ProjectList.tsx  ProjectWrapper.tsx
frontend/src/components/audio-sender/: DesktopLayout.tsx  InsightsPanel.tsx  MobileLayout.tsx  RecordingControls.tsx  TranscriptSection.tsx  TranscriptView.tsx  WebSocketErrorBanner.tsx
frontend/src/lib/: api.ts  message.ts  useAuthenticatedWebSocket.ts
